--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" href="" /> -->
+    <link rel="icon" href="/icons/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Galaxy</title>
     <!-- Google Material icons -->
