--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       type="module"
       src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
     ></script> -->
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
